--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -1,10 +1,45 @@
-<html>
-  <h1>Welcome to the kitchen service</h1>
-  <h3>Our menu:</h3>
-  <ul>
-    <li>Number of dishes: {{ num_dishes }}</li>
-    <li>Number of cooks: {{ num_cooks }}</li>
-    <li>Number of dish types: {{ num_dish_types }}</li>
-    <li>Number of ingredients: {{ num_ingredients }}</li>
-  </ul>
+<!DOCTYPE "html">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kitchen Service Menu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3">
+          <ul>
+            <li>
+              <a href="{% url 'menu:index' %}">Home</a>
+            </li>
+            <li>
+              <a href="#">All cooks</a>
+            </li>
+            <li>
+              <a href="#">All dishes</a>
+            </li>
+            <li>
+              <a href="#">All types of dishes</a>
+            </li>
+            <li>
+              <a href="#">All ingredients</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-9">
+          <h1>Kitchen Service home</h1>
+          <p>Welcome to our Greatest Kitchen Service</p>
+          <h3>Kitchen Service content:</h3>
+          <ul>
+            <li>Number of dishes: {{ num_dishes }}</li>
+            <li>Number of cooks: {{ num_cooks }}</li>
+            <li>Number of types of dishes: {{ num_types_of_dishes }}</li>
+            <li>Number of ingredients: {{ num_ingredients }}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
