--- a/templates/base.html
+++ b/templates/base.html
@@ -13,23 +13,7 @@
       <div class="row">
         <div class="col-sm-3">
           {% block sidebar %}
-            <ul>
-              <li>
-                <a href="{% url 'menu:index' %}">Home</a>
-              </li>
-              <li>
-                <a href="#">All cooks</a>
-              </li>
-              <li>
-                <a href="#">All dishes</a>
-              </li>
-              <li>
-                <a href="#">All types of dishes</a>
-              </li>
-              <li>
-                <a href="#">All ingredients</a>
-              </li>
-            </ul>
+            {% include 'includes/sidebar.html' %}
           {% endblock %}
         </div>
         <div class="col-sm-9">
