--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -3,6 +3,9 @@
     <li>
       User: {{ user.username }}
     </li>
+    <li>
+      <a href="{% url 'logout' %}">Logout</a>
+    </li>
   {% else %}
     <li>
       <a href="{% url 'login' %}">Login</a>
