--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,10 +1,13 @@
 <ul class="sidebar-nav">
-  {% if user.authenticated %}
+  {% if user.is_authenticated %}
     <li>
       User: {{ user.username }}
     </li>
     <li>
-      <a href="{% url 'logout' %}">Logout</a>
+      <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
     </li>
   {% else %}
     <li>
