--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 
-{%% block content %%}
+{% block content %}
   <h1>Login</h1>
+  {% if form.errors %}
+    <p style="color: red">Invalid credentials</p>
+  {% endif %}
   <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    <input type="hidden" name="next" value="{{ next }}">
   </form>
 {% endblock %}
