feat: add create views and templates for DishType and Ingredient; update list templates with create links

--- a/templates/menu/dishtype_list.html
+++ b/templates/menu/dishtype_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Dish Type list</h1>
+  <h1>Dish Type list <a style="float: right;" href="{% url 'menu:dish-type-create' %}">+</a></h1>
   <ul>
     {% for dishtype in dishtype_list %}
       <li>{{ dishtype.name }}</li>
