--- a/templates/menu/ingredient_form.html
+++ b/templates/menu/ingredient_form.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Create Ingredient</h1>
   <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit">Create</button>
   </form>
 {% endblock %}
