--- a/templates/menu/ingredient_form.html
+++ b/templates/menu/ingredient_form.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Create Ingredient</h1>
+  <h1>{{ object|yesno:"Edit,Create" }} Ingredient</h1>
   <form action="" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Create</button>
+    <button type="submit">Submit</button>
   </form>
 {% endblock %}
