--- a/templates/menu/dishtype_form.html
+++ b/templates/menu/dishtype_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <h1>{{ object|yesno:"Edit,Create" }} Dish Type</h1>
-  <form action="" method="post">
+  <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit">Submit</button>
