--- a/templates/menu/dish_list.html
+++ b/templates/menu/dish_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Dish list</h1>
+  <h1>Dish list <a style="float: right;" href="{% url 'menu:dish-create' %}">+</a></h1>
   <ul>
     {% for dish in dish_list %}
       <li><a href="{{ dish.get_absolute_url }}">{{ dish.name }} ({{ dish.price }}, {{ dish.dish_type }})</a></li>
