--- a/templates/menu/dish_list.html
+++ b/templates/menu/dish_list.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Dish list <a style="float: right;" href="{% url 'menu:dish-create' %}">+</a></h1>
+  <form action="" method="get" class="form-inline">
+    {{ search_form|crispy }}
+    <button type="submit" class="btn btn-secondary">🔎</button>
+  </form>
   <ul>
     {% for dish in dish_list %}
       <li><a href="{{ dish.get_absolute_url }}">{{ dish.name }} ({{ dish.price }}, {{ dish.dish_type }})</a></li>
