--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,33 +1,33 @@
-<ul class="sidebar-nav">
+<ul class="sidebar-nav list-group">
   {% if user.is_authenticated %}
-    <li>
+    <li class="list-group-item">
       User: {{ user.username }}
     </li>
-    <li>
+    <li class="list-group-item">
       <form action="{% url 'logout' %}" method="post">
         {% csrf_token %}
-        <button type="submit">Logout</button>
+        <button type="submit" class="btn btn-link" style="padding: 0;">Logout</button>
       </form>
     </li>
   {% else %}
-    <li>
+    <li class="list-group-item">
       <a href="{% url 'login' %}">Login</a>
     </li>
   {% endif %}
   <br>
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'menu:index' %}">Home</a>
   </li>
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'menu:cook-list' %}">All cooks</a>
   </li>
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'menu:dish-list' %}">All dishes</a>
   </li>
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'menu:dish-type-list' %}">All types of dishes</a>
   </li>
-  <li>
+  <li class="list-group-item">
     <a href="{% url 'menu:ingredient-list' %}">All ingredients</a>
   </li>
 </ul>
