--- a/templates/menu/dish_detail.html
+++ b/templates/menu/dish_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>{{ dish.name }} <a style="float: right;" href="{% url 'menu:dish-update' dish.pk %}">Edit</a></h1>
+  <h1>{{ dish.name }} <a style="float: right;" class="btn btn-secondary" href="{% url 'menu:dish-update' dish.pk %}">Edit</a></h1>
   <p>Type: {{ dish.dish_type.name }}</p>
   <p>Description: {{ dish.description }}</p>
   <p>Price: ${{ dish.price }}</p>
