--- a/templates/menu/ingredient_list.html
+++ b/templates/menu/ingredient_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Ingredient list <a style="float: right;" href="{% url 'menu:ingredient-create' %}">+</a></h1>
+  <h1>Ingredient list <a style="float: right;" class="btn btn-secondary" href="{% url 'menu:ingredient-create' %}">+</a></h1>
   <table class="table">
     <tr>
       <th>Name</th>
