--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Login</h1>
@@ -7,8 +8,8 @@
   {% endif %}
   <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Login</button>
     <input type="hidden" name="next" value="{{ next }}">
   </form>
 {% endblock %}
