--- a/templates/menu/cook_form.html
+++ b/templates/menu/cook_form.html
@@ -6,6 +6,6 @@
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock %}
