--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,40 @@
-body {
-  margin-top: 30px;
+.navbar-cotainer {
+  background-color: #d26415;
+  margin: 30px;
+  border-radius: 20px;
 }
 
-.sidebar-nav {
-  padding: 0;
-  list-style: none;
+.navbar-link {
+  margin: 0 10px;
+  color: #ffffff;
+  text-decoration: underline;
+  font-weight: lighter;
+}
+
+.user-item {
+  border: solid 1px #fff;
+  border-radius: 20px;
+  font-weight: lighter;
+  padding: 0 10px;
+}
+
+.mobile-menu-icon {
+  font-size: 28px;
+  color: #fff;
+  border-color:#fff;
+}
+
+.logout-button {
+  color: #fff;
+  font-size: 28px;
+}
+
+.logout-button:hover {
+  color: #000;
+}
+
+@media only screen and (max-width: 768px) {
+  .user-item {
+    display: none;
+  }
 }
