--- a/templates/base.html
+++ b/templates/base.html
@@ -1,32 +1,26 @@
+{% load static %}
+
 <!DOCTYPE "html">
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block title %}
-      <title>Kitchen Service Menu</title>
+    <title>Kitchen Service Menu</title>
     {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
+    <script src="https://kit.fontawesome.com/702599a238.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3">
-          {% block sidebar %}
-            {% include 'includes/sidebar.html' %}
-          {% endblock %}
-        </div>
-        <div class="col-sm-9">
-          {% block content %}
-          {% endblock %}
-          {% block pagination %}
-            {% include 'includes/pagination.html' %}
-          {% endblock %}
-        </div>
-      </div>
-    </div>
+    {% block sidebar %}
+      {% include 'includes/navbar.html' %}
+    {% endblock %}
+    {% block content %}
+    {% endblock %}
+    {% block pagination %}
+      {% include 'includes/pagination.html' %}
+    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
