--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -1,13 +1,62 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <h1>Kitchen Service home</h1>
-  <p>Welcome to our Greatest Kitchen Service</p>
-  <h3>Kitchen Service content:</h3>
-  <ul>
-    <li>Number of dishes: {{ num_dishes }}</li>
-    <li>Number of cooks: {{ num_cooks }}</li>
-    <li>Number of types of dishes: {{ num_types_of_dishes }}</li>
-    <li>Number of ingredients: {{ num_ingredients }}</li>
-  </ul>
+  <div class="d-flex justify-content-center gap-5">
+    <img src="{% static 'img/index_img_1.png' %}" alt="dish image" height="100px" class="hidden-in-tablet">
+    <div class="text-center">
+      <h1 style="font-family: var(--font-title); color: var(--font-green); margin-top: 15px;">
+        Kitchen Service home
+      </h1>
+      <p style="color: #585858; margin: 0;">
+        Welcome to our Greatest Kitchen Service
+      </p>
+    </div>
+    <img src="{% static 'img/index_img_2.png' %}" alt="dish image" height="100px" class="hidden-in-tablet">
+  </div>
+  <div class="text-center hidden-in-tablet" style="padding: 1rem 0;">
+    <img src="{% static 'img/foods.png' %}" alt="dish images" height="100px">
+  </div>
+  <div class="mx-auto" style="max-width: 700px; width: 90%;">
+    <h3 class="text-center" style="color: #959595; font-weight: normal; margin: 2rem 0;">
+      Kitchen Service Content:
+    </h3>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <span>Number of dishes: {{ num_dishes }}</span>
+            <span style="font-size: 1.5rem;"><i class="fa-solid fa-utensils"></i></span>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <span>Number of cooks: {{ num_cooks }}</span>
+            <span style="font-size: 1.5rem;"><i class="fa-solid fa-certificate"></i></span>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <span>Number of types of dishes: {{ num_types_of_dishes }}</span>
+            <span style="font-size: 1.5rem;"><i class="fa-solid fa-cheese"></i></span>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <span>Number of ingredients: {{ num_ingredients }}</span>
+            <span style="font-size: 1.5rem;"><i class="fa-solid fa-carrot"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="d-flex justify-content-center">
+    <img src="{% static 'img/index_footer.png' %}" alt="" height="50px" style="bottom: 0; position: fixed;" class="hidden-in-tablet">
+  </footer>
 {% endblock %}
