--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -26,7 +26,7 @@
         <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of dishes: {{ num_dishes }}</span>
-            <span style="font-size: 1.5rem;"><i class="fa-solid fa-utensils"></i></span>
+            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-utensils"></i></span>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of cooks: {{ num_cooks }}</span>
-            <span style="font-size: 1.5rem;"><i class="fa-solid fa-certificate"></i></span>
+            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-certificate"></i></span>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of types of dishes: {{ num_types_of_dishes }}</span>
-            <span style="font-size: 1.5rem;"><i class="fa-solid fa-cheese"></i></span>
+            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-cheese"></i></span>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
         <div class="card" style="width: 300px; border: solid 1px #D26415; color: #7D7D7D; background-color: rgb(210, 100, 21, 0.2);">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of ingredients: {{ num_ingredients }}</span>
-            <span style="font-size: 1.5rem;"><i class="fa-solid fa-carrot"></i></span>
+            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-carrot"></i></span>
           </div>
         </div>
       </div>
