--- a/templates/menu/cook_list.html
+++ b/templates/menu/cook_list.html
@@ -1,20 +1,25 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <h1>Cook list <a style="float: right;" class="btn btn-secondary" href="{% url 'menu:cook-create' %}">+</a></h1>
-  <table class="table">
+  <div class="d-flex justify-content-evenly">
+    <img class="hidden-in-tablet" src="{% static 'img/cook_list_title_img.png' %}" alt="" height="50px">
+    <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Cook list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
+    <img class="hidden-in-tablet" src="{% static 'img/cook_list_title_img.png' %}" alt="" height="50px">
+  </div> 
+  <table class="mx-auto">
     <tr>
       <th>Full Name</th>
-      <th>Username</th>
-      <th>Years of Experience</th>
-      <th></th>
+      <th class="hidden-in-tablet">Username</th>
+      <th class="hidden-in-tablet">Years of Experience</th>
+      <th style="background-color: transparent;"><a class="add-link" href="{% url 'menu:dish-create' %}"><i class="fa-solid fa-plus"></i></a></th>
     </tr>
     {% for cook in cook_list %}
       <tr>
         <td>{{ cook.first_name }} {{ cook.last_name }}</td>
-        <td>{{ cook.username }}</td>
-        <td>{{ cook.years_of_experience }}</td>
-        <td><a href="{{ cook.get_absolute_url }}">View</a></td>
+        <td class="hidden-in-tablet">{{ cook.username }}</td>
+        <td class="hidden-in-tablet">{{ cook.years_of_experience }}</td>
+        <td><a href="{{ cook.get_absolute_url }}" class="view-link">View</a></td>
       </tr>
     {% empty %}
       <tr>
