fix: correct link for adding a new cook in the cook list table

--- a/templates/menu/cook_list.html
+++ b/templates/menu/cook_list.html
@@ -12,7 +12,7 @@
       <th>Full Name</th>
       <th class="hidden-in-tablet">Username</th>
       <th class="hidden-in-tablet">Years of Experience</th>
-      <th style="background-color: transparent;"><a class="add-link" href="{% url 'menu:dish-create' %}"><i class="fa-solid fa-plus"></i></a></th>
+      <th style="background-color: transparent;"><a class="add-link" href="{% url 'menu:cook-create' %}"><i class="fa-solid fa-plus"></i></a></th>
     </tr>
     {% for cook in cook_list %}
       <tr>
