--- a/templates/menu/cook_list.html
+++ b/templates/menu/cook_list.html
@@ -3,16 +3,18 @@
 
 {% block content %}
   <div class="d-flex justify-content-evenly">
-    <img class="hidden-in-tablet" src="{% static 'img/cook_list_title_img.png' %}" alt="" height="50px">
+    <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
     <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Cook list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
-    <img class="hidden-in-tablet" src="{% static 'img/cook_list_title_img.png' %}" alt="" height="50px">
+    <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
   </div> 
   <table class="mx-auto">
     <tr>
       <th>Full Name</th>
       <th class="hidden-in-tablet">Username</th>
       <th class="hidden-in-tablet">Years of Experience</th>
-      <th style="background-color: transparent;"><a class="add-link" href="{% url 'menu:cook-create' %}"><i class="fa-solid fa-plus"></i></a></th>
+      <th style="background-color: transparent;">
+        <a class="add-link" href="{% url 'menu:cook-create' %}"><i class="fa-solid fa-plus"></i></a>
+      </th>
     </tr>
     {% for cook in cook_list %}
       <tr>
