--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-cotainer">
+<nav class="navbar navbar-expand-lg navbar-container">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'menu:index' %}">
       <img src="{% static 'img/logo.png' %}" alt="Logo" height="50">
