--- a/templates/menu/dish_list.html
+++ b/templates/menu/dish_list.html
@@ -8,9 +8,13 @@
     <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Dish list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
     <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
   </div> 
-  <form action="" method="get" class="form-inline">
-    {{ search_form|crispy }}
-    <input type="submit" class="btn btn-secondary" value="🔎">
+  <form action="" method="get" style="margin: 1rem 0 2rem">
+    <div class="input-group d-flex justify-content-center container-search">
+      {{ search_form|crispy }}
+      <button type="submit" class="btn" style="background-color: var(--orange); color: white; border-radius: 0 50px 50px 0;">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </div>
   </form>
   <table class="mx-auto">
     <thead>
