--- a/templates/menu/ingredient_list.html
+++ b/templates/menu/ingredient_list.html
@@ -1,21 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <h1>Ingredient list <a style="float: right;" class="btn btn-secondary" href="{% url 'menu:ingredient-create' %}">+</a></h1>
-  <table class="table">
+  <div class="d-flex justify-content-evenly">
+    <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
+    <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Ingredient list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
+    <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
+  </div>
+  <table class="mx-auto">
     <tr>
       <th>Name</th>
       <th>Edit</th>
-      <th>Delete</th>
+      <th style="background-color: transparent;">
+        <a class="add-link" href="{% url 'menu:ingredient-create' %}"><i class="fa-solid fa-plus"></i></a>
+      </th>
     </tr>
     {% for ingredient in ingredient_list %}
       <tr>
         <td>{{ ingredient.name }}</td>
         <td>
-          <a href="{% url 'menu:ingredient-update' ingredient.pk %}">EDIT</a>
+          <a href="{% url 'menu:ingredient-update' ingredient.pk %}" class="view-link">Edit</a>
         </td>
-        <td>
-          <a href="{% url 'menu:ingredient-delete' ingredient.pk %}">DELETE</a>
+        <td style="background-color: transparent;">
+          <a href="{% url 'menu:ingredient-delete' ingredient.pk %}" style="color: red"><i class="fa-regular fa-trash-can"></i></a>
         </td>
       </tr>
     {% empty %}
