fix: update table header and cell styles to use bg-transparent class for consistency

--- a/templates/menu/dish_list.html
+++ b/templates/menu/dish_list.html
@@ -22,7 +22,7 @@
         <th>Name</th>
         <th class="hidden-in-tablet">Type</th>
         <th class="hidden-in-tablet">Price</th>
-        <th style="background-color: transparent;">
+        <th class="bg-transparent">
           <a class="add-link" href="{% url 'menu:dish-create' %}"><i class="fa-solid fa-plus"></i></a>
         </th>
       </tr>
