--- a/templates/menu/cook_list.html
+++ b/templates/menu/cook_list.html
@@ -12,7 +12,7 @@
       <th>Full Name</th>
       <th class="hidden-in-tablet">Username</th>
       <th class="hidden-in-tablet">Years of Experience</th>
-      <th style="background-color: transparent;">
+      <th class="bg-transparent">
         <a class="add-link" href="{% url 'menu:cook-create' %}"><i class="fa-solid fa-plus"></i></a>
       </th>
     </tr>
