fix: refactor footer implementation into a separate include file for reusability

--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -56,7 +56,5 @@
       </div>
     </div>
   </div>
-  <footer class="d-flex justify-content-center">
-    <img src="{% static 'img/index_footer.png' %}" alt="" height="50px" style="bottom: 0; position: fixed;" class="hidden-in-tablet">
-  </footer>
+  {% include 'includes/footer.html' %}
 {% endblock %}
