--- a/templates/menu/dishtype_list.html
+++ b/templates/menu/dishtype_list.html
@@ -2,15 +2,15 @@
 {% load static %}
 
 {% block content %}
-  <div class="d-flex justify-content-evenly">
+  <div class="d-flex justify-content-evenly" style="margin-bottom: 25px;">
     <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
     <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Dish Type list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
     <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
   </div>
   <table class="mx-auto">
     <tr>
-      <th>Name</th>
-      <th>Edit</th>
+      <th style="width: 200px;">Name</th>
+      <th style="width: 150px;">Edit</th>
       <th class="bg-transparent">
         <a class="add-link" href="{% url 'menu:dish-type-create' %}"><i class="fa-solid fa-plus"></i></a>
       </th>
@@ -22,7 +22,7 @@
           <a href="{% url 'menu:dish-type-update' dishtype.pk %}" class="view-link">Edit</a>
         </td>
         <td class="bg-transparent">
-          <a href="{% url 'menu:dish-type-delete' dishtype.pk %}" style="color: red"><i class="fa-regular fa-trash-can"></i></a>
+          <a href="{% url 'menu:dish-type-delete' dishtype.pk %}" class="view-link"><i class="fa-regular fa-trash-can"></i></a>
         </td>
       </tr>
     {% empty %}
