--- a/templates/menu/ingredient_list.html
+++ b/templates/menu/ingredient_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-  <div class="d-flex justify-content-evenly">
+  <div class="d-flex justify-content-evenly" style="margin-bottom: 25px;">
     <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
     <h1 class="d-flex align-items-center" style="font-family: var(--font-title); color: var(--font-green);">Ingredient list <img style="margin-left: 10px;" src="{% static 'img/cook_img.png' %}" alt="" height="45px"></h1>
     <img class="hidden-in-tablet" src="{% static 'img/list_title_img.png' %}" alt="" height="50px">
@@ -17,12 +17,12 @@
     </tr>
     {% for ingredient in ingredient_list %}
       <tr>
-        <td>{{ ingredient.name }}</td>
-        <td>
+        <td style="width: 200px;">{{ ingredient.name }}</td>
+        <td style="width: 150px;">
           <a href="{% url 'menu:ingredient-update' ingredient.pk %}" class="view-link">Edit</a>
         </td>
         <td class="bg-transparent">
-          <a href="{% url 'menu:ingredient-delete' ingredient.pk %}" style="color: red"><i class="fa-regular fa-trash-can"></i></a>
+          <a href="{% url 'menu:ingredient-delete' ingredient.pk %}" class="view-link"><i class="fa-regular fa-trash-can"></i></a>
         </td>
       </tr>
     {% empty %}
