--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,14 +2,17 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Login</h1>
+  <h1 class="text-center" style="color: var(--font-green);">Login</h1>
   {% if form.errors %}
-    <p style="color: red">Invalid credentials</p>
+    <p class="text-center" style="color: red">Invalid credentials</p>
   {% endif %}
-  <form action="" method="post">
+  <form action="" method="post" style="max-width: 400px; width: 90%;" class="mx-auto form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Login</button>
+    <div class="text-center">
+      <button type="submit" class="btn btn-orange">Login</button>
+    </div>
     <input type="hidden" name="next" value="{{ next }}">
   </form>
+  {% include 'includes/footer.html' %}
 {% endblock %}
