--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,11 +6,11 @@
   {% if form.errors %}
     <p class="text-center" style="color: red">Invalid credentials</p>
   {% endif %}
-  <form action="" method="post" style="max-width: 400px; width: 90%;" class="mx-auto form">
+  <form action="" method="post" style="max-width: 400px; width: 90%;" class="mx-auto login">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="text-center">
-      <button type="submit" class="btn btn-orange">Login</button>
+      <button type="submit" class="btn btn-orange" style="width: 100px; font-size: 1.5rem;">Login</button>
     </div>
     <input type="hidden" name="next" value="{{ next }}">
   </form>
