--- a/templates/menu/cook_form.html
+++ b/templates/menu/cook_form.html
@@ -2,10 +2,12 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Create Cook</h1>
-  <form action="" method="post" novalidate>
+  <h1 class="text-center" style="color: var(--font-green);">Create Cook</h1>
+  <form action="" method="post" novalidate style="max-width: 600px; width: 90%;" class="mx-auto form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="text-center">
+      <button type="submit" class="btn btn-orange" style="width: 100px;">Submit</button>
+    </div>
   </form>
 {% endblock %}
