--- a/templates/menu/cook_form.html
+++ b/templates/menu/cook_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1 class="text-center" style="color: var(--font-green);">Create Cook</h1>
+  <h1 class="text-center" style="color: var(--font-green); font-family: var(--font-title);">Create Cook</h1>
   <form action="" method="post" novalidate style="max-width: 600px; width: 90%;" class="mx-auto form">
     {% csrf_token %}
     {{ form|crispy }}
