--- a/templates/menu/ingredient_confirm_delete.html
+++ b/templates/menu/ingredient_confirm_delete.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Delete Ingredient</h1>
+<div style="margin-left: 10%;">
+  <h1 style="font-size: 2rem; color: var(--font-green); margin-bottom: 15px;">Delete Ingredient</h1>
 
-  <p>Are you sure you want to delete the ingredient: {{ ingredient }}</p>
+  <p>Are you sure you want to delete the ingredient: <u>{{ ingredient }}</u></p>
   <form action="" method="post">
     {% csrf_token %}
     <button class="btn btn-danger" type="submit">Yes, delete</button>
   </form>
+  {% include 'includes/footer.html' %}
+</div>
 {% endblock %}
