--- a/templates/menu/ingredient_form.html
+++ b/templates/menu/ingredient_form.html
@@ -10,4 +10,5 @@
       <button type="submit" class="btn btn-orange" style="width: 100px; margin-top: 25px;">Submit</button>
     </div>
   </form>
+  {% include 'includes/footer.html' %}
 {% endblock %}
