--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -23,34 +23,34 @@
     </h3>
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col d-flex justify-content-center align-items-center">
-        <div class="card" style="width: 300px; border: solid 1px var(--orange); color: #7D7D7D; background-color: var(--orange-light);">
+        <div class="card index-card">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of dishes: {{ num_dishes }}</span>
-            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-utensils"></i></span>
+            <span class="card-icon"><i class="fa-solid fa-utensils"></i></span>
           </div>
         </div>
       </div>
       <div class="col d-flex justify-content-center align-items-center">
-        <div class="card" style="width: 300px; border: solid 1px var(--orange); color: #7D7D7D; background-color: var(--orange-light);">
+        <div class="card index-card">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of cooks: {{ num_cooks }}</span>
-            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-certificate"></i></span>
+            <span class="card-icon"><i class="fa-solid fa-certificate"></i></span>
           </div>
         </div>
       </div>
       <div class="col d-flex justify-content-center align-items-center">
-        <div class="card" style="width: 300px; border: solid 1px var(--orange); color: #7D7D7D; background-color: var(--orange-light);">
+        <div class="card index-card">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of types of dishes: {{ num_types_of_dishes }}</span>
-            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-cheese"></i></span>
+            <span class="card-icon"><i class="fa-solid fa-cheese"></i></span>
           </div>
         </div>
       </div>
       <div class="col d-flex justify-content-center align-items-center">
-        <div class="card" style="width: 300px; border: solid 1px var(--orange); color: #7D7D7D; background-color: var(--orange-light);">
+        <div class="card index-card">
           <div class="card-body d-flex justify-content-between align-items-center">
             <span>Number of ingredients: {{ num_ingredients }}</span>
-            <span style="font-size: 1.5rem; color: #8E4600;"><i class="fa-solid fa-carrot"></i></span>
+            <span class="card-icon"><i class="fa-solid fa-carrot"></i></span>
           </div>
         </div>
       </div>
