--- a/templates/menu/dishtype_form.html
+++ b/templates/menu/dishtype_form.html
@@ -10,5 +10,5 @@
       <button type="submit" class="btn btn-orange" style="width: 100px; margin-top: 25px;">Submit</button>
     </div>
   </form>
-  {% include 'includes/footer.html' with footer_bottom="0" %}
+  {% include 'includes/footer.html' %}
 {% endblock %}
