--- a/templates/menu/ingredient_list.html
+++ b/templates/menu/ingredient_list.html
@@ -5,16 +5,16 @@
   {% include 'includes/title.html' with title="Ingredient list" %}
   <table class="mx-auto">
     <tr>
-      <th>Name</th>
-      <th>Edit</th>
+      <th style="width: 200px;">Name</th>
+      <th style="width: 150px;">Edit</th>
       <th class="bg-transparent">
         <a class="add-link" href="{% url 'menu:ingredient-create' %}"><i class="fa-solid fa-plus"></i></a>
       </th>
     </tr>
     {% for ingredient in ingredient_list %}
       <tr>
-        <td style="width: 200px;">{{ ingredient.name }}</td>
-        <td style="width: 150px;">
+        <td>{{ ingredient.name }}</td>
+        <td =>
           <a href="{% url 'menu:ingredient-update' ingredient.pk %}" class="view-link">Edit</a>
         </td>
         <td class="bg-transparent">
