style: update font family and color variables for consistency across styles

--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -8,7 +8,7 @@
       <h1 style="font-family: var(--font-title); color: var(--font-green); margin-top: 15px;">
         Kitchen Service home
       </h1>
-      <p style="color: #585858; margin: 0;">
+      <p style="color: var(--gray); margin: 0;">
         Welcome to our Greatest Kitchen Service
       </p>
     </div>
