style: add text color to dish detail container for improved readability

--- a/templates/menu/dish_detail.html
+++ b/templates/menu/dish_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-  <div class="mx-auto" style="max-width: 800px; width: 90%;">
+  <div class="mx-auto" style="max-width: 800px; width: 90%; color: var(--gray);">
     <h1 class="d-flex align-items-center justify-content-center gap-5" style="font-family: var(--font-title); color: var(--font-green);">
       {{ dish.name }}
       <img src="{% static 'img/index_img_1.png' %}" alt="dish image" height="100px" class="hidden-in-tablet">
